--- a/Blog Post Project/index.html
+++ b/Blog Post Project/index.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
-    <h1>A Blog Post</h1>
+    <div class="hero">
+        <h1>A Blog Post</h1>
+    <p>Typography is one of the most important elements of front end design and development! In this exercise, we'll
+        play around with some of the common CSS properties to manage and style our fonts by making a nice blog post-like
+        web page.</p>
+        <hr>
+    </div>
     <div class="content">
         <p class="info">05.05.2025 | <span>all about css blog</span></p>
         <h2>All About Typography</h2>
@@ -22,7 +28,7 @@
             Headlines, like this one, are great ways to quickly capture the
             reader's attention, to give them a sumary, intro, or other important
             information in a web page. You can use
-            <span>text-transform: uppercase;</span> to make a whole body of text
+            <code>text-transform: uppercase;</code> to make a whole body of text
             uppercase using CSS if you really need to grab attention!
         </p>
         <p>
@@ -47,31 +53,96 @@
             <cite>– A wise person</cite>
         </blockquote>
         <hr>
-        <h3>a new section</h3>
+        <h3 class="new-section">a new section</h3>
         <p>
-            And just like that, we've got a new section of content separated by a hr element (a 'horizontal rule' or a
+            And just like that, we've got a new section of content separated by a <code>hr</code> element (a 'horizontal
+            rule' or a
             divider) and a new heading. Isn't putting content together fun?
         </p>
         <p>
-            Notice as well that when we entered in the H3 content, it was all lowercase, but now it's in a nice Title
-            Case, where the first letter of each word is capitalized. We did that with CSS! Using text-transform:
-            capitalize; we can implement title cased content.
+            Notice as well that when we entered in the <code>h3</code> content, it was all lowercase, but now it's in a
+            nice Title
+            Case, where the first letter of each word is capitalized. We did that with CSS! Using <code>text-transform:
+            capitalize;</code> we can implement title cased content.
         </p>
 
         <h4>Heading 4</h4>
-        <p>These are sub-subsections, providing another level of organization below h3. They are typically rendered
-            smaller than h3.
+        <p>These are sub-subsections, providing another level of organization below <code>h3</code>. They are typically
+            rendered
+            smaller than <code>h3</code>.
         </p>
 
         <h5>Heading 5</h5>
-        <p>These represent even deeper levels of subsections. They are usually rendered smaller than h4.
+        <p>These represent even deeper levels of subsections. They are usually rendered smaller than <code>h4</code>.
         </p>
 
-        <h5>Heading 6</h5>
+        <h6>Heading 6</h6>
         <p>This is the least important heading tag and represents the deepest level of sectioning. It's often rendered
             in a relatively small font, similar to regular body text but often bold.
         </p>
+
+        <h3>Common Font Sizing Approaches</h3>
+        <h4><code>px</code> (pixels)</h4>
+        <p>
+            Pixels are the simplest way to hard code your font size. By default the browser sets the root font size to
+            <code>16px</code>, but you can change the font size in the body element or any other HTML element by setting
+            <code>font-size</code> to
+            any number of <code>px</code>
+        </p>
+        <h4><code>em</code></h4>
+        <p>
+            <code>em</code> units size font relative to the parent element. For example, if the body element is
+            <code>16px</code>, and a nested
+            <code>div</code> element's font size is set to <code>1.5rem</code>, the browser will multiply
+            <code> x 1.5</code>16px, resulting in <code>24px</code> font in the
+            div.
+        </p>
+        <h4><code>rem</code> (root em)</h4>
+        <p>
+            Root <code>em</code> units are similar to <code>em</code>, but they are relative to the root font size
+            instead of the parent element
+            of whatever is being styled. For example, if the root font size (the font size of the <code>body</code>
+            element) is set
+            to <code>16px</code>, and we have a <code>p</code> element nested many layers down with a
+            <code>font-size</code>16px set to <code>2rem</code>16px, that paragraph will
+            have <code>32px</code>16px font. If the <code>body</code> font size ever changes, this paragraph will also
+            change accordingly.
+        </p>
+        <h4>Which one do I use?</h4>
+        <p>
+            Great question! Generally, people try to stick to using <code>em</code> or <code>rem</code> over
+            <code>px</code>, since they make responsive
+            typography that scales up and down across different device widths much easier. Using <code>px</code> for
+            your font sizes
+            is not as dynamic, and you may find that writing media queries to update all the various element font sizes
+            in pixels at different screen widths is not the most scalable approach to typography.
+        </p>
+        <p>
+            Between <code>em</code> and <code>rem</code>, <code>rem</code> has a nice advantage of all elements being
+            relative to one single root font value,
+            where nested elements with parent/child font size dependencies can still be hard to manage with
+            <code>em</code> units.
+            When writing responsive styles, <code>rem</code> allows you to simply update the root font size at different
+            screen sizes
+            and all elements using <code>rem</code> units will adjust themselves accordingly creating a super
+            easy-to-manage
+            typography size system.
+        </p>
+        <p>
+            In small projects you may not have an issues hard coding pixelage, but it's always important to understand
+            the drawbacks of writing styles that may not be responsive or dynamic.
+        </p>
     </div>
+
+    <footer>
+        <ul>
+            <li><a href="#policy">Privacy Policy</a></li>
+            <li><a href="#terms">Terms & Conditions</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#info">More info</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
