--- a/Blog Post Project/index.html
+++ b/Blog Post Project/index.html
@@ -16,9 +16,10 @@
 <body>
     <div class="hero">
         <h1>A Blog Post</h1>
-    <p>Typography is one of the most important elements of front end design and development! In this exercise, we'll
-        play around with some of the common CSS properties to manage and style our fonts by making a nice blog post-like
-        web page.</p>
+        <p>Typography is one of the most important elements of front end design and development! In this exercise, we'll
+            play around with some of the common CSS properties to manage and style our fonts by making a nice blog
+            post-like
+            web page.</p>
         <hr>
     </div>
     <div class="content">
