created the events section and the footer. Project Completed.

--- a/CV Project/index.html
+++ b/CV Project/index.html
@@ -70,13 +70,41 @@
                     Should public transit be free?
                 </p>
                 <p class="blog-text">
-                    Public transit is a system of transportation that is available for use by the general public, typically
-                    consisting of buses, trains, subways, and other forms of mass transit. The question of whether public
+                    Public transit is a system of transportation that is available for use by the general public,
+                    typically
+                    consisting of buses, trains, subways, and other forms of mass transit. The question of whether
+                    public
                     transit should be free is a complex and contentious issue.
                 </p>
                 <p class="blog-date">January 10, 2025</p>
             </div>
         </div>
     </section>
+    <section class="events-section">
+        <div class="events-content">
+            <div class="two-column-section">
+                <p>Speaking Events</p>
+                <div class="events-card">
+                    <p class="event-title">NY Economic Forum</p>
+                    <p class="event-location">New York, NY</p>
+                    <p class="event-date">August 25<sup>th</sup> 2025, 7:00pm</p>
+                    <p class="event-title">Emerging Tech Meet-Up</p>
+                    <p class="event-location">San Francisco, CA</p>
+                    <p class="event-date">January 17<sup>th</sup> 2024, 5:00pm</p>
+                    <p class="event-title">Creative COde Meet-Up</p>
+                    <p class="event-location">Denver, CO</p>
+                    <p class="event-date">May 10<sup>th</sup> 2025, 2:00pm</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-content">
+            <img src="images/instagram.png" alt="instagram">
+            <img src="images/twitter.png" alt="twitter">
+            <p>Made with ❤️</p>
+        </div>
+    </footer>
 </body>
+
 </html>
