--- a/Cost Estimator Project/index.html
+++ b/Cost Estimator Project/index.html
@@ -16,12 +16,44 @@
     <h1>Estimate your cost</h1>
     <div class="container">
         <div class="tabs">
-            <p>Free</p>
-            <p class="active">Team</p>
-            <p>Professional</p>
-            <p>Enterprise</p>
+            <p>free</p>
+            <p class="active">team</p>
+            <p>professional</p>
+            <p>enterprise</p>
         </div>
         <div class="line"></div>
+        <div class="toggle-wrapper">
+            <img src="images/icon1.png" alt="">
+            <div class="toggle">
+                <span>Mobile</span>
+                <span>Web</span>
+            </div>
+            <img src="images/icon2.png" alt="">
+        </div>
+        <div class="sessions-card">
+            <p>Monthly Sessions</p>
+            <p class="number">20,000</p>
+        </div>
+        <p class="description">A session is a continuous period of user activity on your web app or website. Choose exactly how many sessions you wish to record and discard the extras.</p>
+        <div class="slider">
+            <div class="bar">
+                <div class="progress"></div>
+                <div class="point"></div>
+            </div>
+            <div class="scale">
+                <ul>
+                    <li>0</li>
+                    <li>1k</li>
+                    <li>10k</li>
+                    <li>25k</li>
+                    <li>50k</li>
+                    <li>250k</li>
+                    <li>1M</li>
+                    <li>10M</li>
+                    <li>250M</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 
